# AFAD

./: .gitignore  .rayignore  =6.0  README.md  pyproject.toml  requirements.txt
config/: afad_config.yaml  afad_phase2_config.yaml  afad_phase3_config.yaml
docs/Add_Progress_Indicators/: implementation_plan.md  task.md  walkthrough.md
docs/Debug_Flower_Simulation/: implementation_plan.md  task.md  walkthrough.md
docs/Enable_GPU_Support/: implementation_plan.md  task.md  walkthrough.md
docs/Fix_HeteroFL_Error/: implementation_plan.md  task.md  walkthrough.md
docs/Further_Simulation_Optimization/: implementation_plan.md  task.md  walkthrough.md
docs/Optimize_Simulation_Speed/: implementation_plan.md  task.md  walkthrough.md
docs/Restore_Full_Dataset/: implementation_plan.md  task.md  walkthrough.md
docs/Run_System_Setup/: task.md
docs/phase1_implementation/: AFAD_Specification.md  implementation_plan.md  task.md  walkthrough.md
scripts/: debug_integration.py  run_comparison.py  run_direct_sim.py  run_experiment.py  run_multi_seed.py  run_quick_test.py
src/client/: afad_client.py  fedgen_client.py  heterofl_client.py
src/data/: dataset_config.py  medmnist_loader.py  mnist_loader.py
src/models/: fedgen_wrapper.py  registry.py  scaler.py
src/routing/: family_router.py
src/server/: afad_server.py
tests/: test_afad_integration.py  test_dataset_config.py  test_fedgen_distiller.py  test_fedgen_faithful.py  test_fedprox.py  test_generator.py  test_heterofl_aggregator.py  test_integration.py  test_medmnist_loader.py  test_metrics.py  test_router.py
(+16 files in other folders)
